--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href= "recipes/momo.html">Momo</a>
+    <ul>
+    <li>><a href= "recipes/momo.html">Momo</a></li>
+    <li>><a href="recipes/samosa.html">samosa</a></li>
+    <li><a href="recipes/fries.html"></a></li>    
+    </ul>
 </body>
 </html>
