--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
     <li>><a href= "recipes/momo.html">Momo</a></li>
     <li>><a href="recipes/samosa.html">samosa</a></li>
-    <li><a href="recipes/fries.html"></a></li>    
+    <li><a href="recipes/fries.html">Fries</a></li>    
     </ul>
 </body>
 </html>
