--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Odin Recipes</h1>
     <ul>
     <li>><a href= "recipes/momo.html">Momo</a></li>
-    <li>><a href="recipes/samosa.html">samosa</a></li>
+    <li>><a href="recipes/samosa.html">Samosa</a></li>
     <li><a href="recipes/fries.html">Fries</a></li>    
     </ul>
 </body>
