--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-    <li>><a href= "recipes/momo.html"Momo</a></li>
-    <li>><a href="recipes/samosa.html"Samosa</a></li>
-    <li><a href="recipes/fries.html"Fries</a></li>    
+    <li><a href= "recipes/momo.html">Momo</a></li>
+    <li><a href="recipes/samosa.html">Samosa</a></li>
+    <li><a href="recipes/fries.html">Fries</a></li>    
     </ul>
 </body>
 </html>
